--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
 
     <div class="contact row">
         <div class="container">
-            <h2>Helooo welcome Sassy Tutorial</h2>
+            <h2>Helooo welcome Sassy Tutorial Learning</h2>
             <p>My contact info</p>
             <button>Submit</button>
         </div>
